# wmoge

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  LICENSE.md  README.md  README_8md.html  __bind_8cpp.html  __bind_8cpp__incl.map  __bind_8cpp__incl.md5  __bind_8hpp.html  __bind_8hpp__dep__incl.map  __bind_8hpp__dep__incl.md5  __bind_8hpp_source.html  aabb_8hpp.html  aabb_8hpp__dep__incl.map  aabb_8hpp__dep__incl.md5  aabb_8hpp__incl.map  aabb_8hpp__incl.md5  aabb_8hpp_source.html  action__manager_8cpp.html  action__manager_8cpp__incl.map  action__manager_8cpp__incl.md5  action__manager_8hpp.html  action__manager_8hpp__dep__incl.map  action__manager_8hpp__dep__incl.md5  action__manager_8hpp__incl.map  action__manager_8hpp__incl.md5  action__manager_8hpp_source.html  action__map_8cpp.html  action__map_8cpp__incl.map  action__map_8cpp__incl.md5  action__map_8hpp.html  action__map_8hpp__dep__incl.map  action__map_8hpp__dep__incl.md5  action__map_8hpp__incl.map  action__map_8hpp__incl.md5  (+13617 more)
editor/code/: CMakeLists.txt  editor.hpp
engine/: CMakeLists.txt  assets.manifest  engine.hpp
engine/asset/: _rtti.hpp  array_mesh.cpp  array_mesh.hpp  asset.cpp  asset.hpp  asset_import_data.hpp  asset_loader.hpp  asset_manager.cpp  asset_manager.hpp  asset_meta.cpp  asset_meta.hpp  asset_pak.hpp  asset_pak_fs.cpp  asset_ref.hpp  audio_stream.cpp  audio_stream.hpp  audio_stream_wav.cpp  audio_stream_wav.hpp  config_file.cpp  config_file.hpp  font.cpp  font.hpp  image.cpp  image.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pfx_effect.cpp  pfx_effect.hpp  prefab.cpp  prefab.hpp  register_classes_asset.cpp  register_classes_asset.hpp  scene_packed.cpp  scene_packed.hpp  scene_tree_packed.cpp  scene_tree_packed.hpp  (+6 more)
engine/audio/: _rtti.hpp  audio_bus.hpp  audio_defs.hpp  audio_engine.hpp  audio_playback.hpp  audio_stream.cpp  audio_stream.hpp  audio_stream_wav.cpp  audio_stream_wav.hpp
engine/code/: CMakeLists.txt  engine.hpp
engine/components/: audio_listener_2d.cpp  audio_listener_2d.hpp  audio_source_2d.cpp  audio_source_2d.hpp  camera_2d.cpp  camera_2d.hpp  canvas_item.cpp  canvas_item.hpp  canvas_layer.cpp  canvas_layer.hpp  canvas_text.cpp  canvas_text.hpp  particles_2d.cpp  particles_2d.hpp  register_classes_components.cpp  register_classes_components.hpp  script_component.cpp  script_component.hpp  spatial_2d.cpp  spatial_2d.hpp  sprite_instance.cpp  sprite_instance.hpp  tag.cpp  tag.hpp
engine/config/: cvars.cfg  engine.cfg  game.cfg  linux.cfg  macos.cfg  vulkan.cfg  windows.cfg
engine/core/: array_view.hpp  async.cpp  async.hpp  buffered_vector.hpp  callback_queue.cpp  callback_queue.hpp  callback_stream.cpp  callback_stream.hpp  class.cpp  class.hpp  cmd_line.cpp  cmd_line.hpp  cmd_stream.cpp  cmd_stream.hpp  crc32.cpp  crc32.hpp  data.cpp  data.hpp  date_time.cpp  date_time.hpp  engine.cpp  engine.hpp  fast_map.hpp  fast_set.hpp  fast_vector.hpp  flat_map.hpp  flat_set.hpp  hook.hpp  ioc_container.cpp  ioc_container.hpp  layer.cpp  layer.hpp  log.cpp  log.hpp  mask.hpp  object.cpp  object.hpp  pool_vector.hpp  random.cpp  random.hpp  (+33 more)
engine/debug/: console.cpp  console.hpp  debug_layer.cpp  debug_layer.hpp  profiler.cpp  profiler.hpp
engine/ecs/: ecs_component.hpp  ecs_core.cpp  ecs_core.hpp  ecs_entity.hpp  ecs_memory.cpp  ecs_memory.hpp  ecs_registry.cpp  ecs_registry.hpp  ecs_system.hpp  ecs_world.cpp  ecs_world.hpp
engine/event/: event.hpp  event_action.cpp  event_action.hpp  event_asset.hpp  event_filesystem.hpp  event_input.cpp  event_input.hpp  event_listener.cpp  event_listener.hpp  event_manager.cpp  event_manager.hpp  event_resource.cpp  event_resource.hpp  event_scene.cpp  event_script.cpp  event_script.hpp  event_token.hpp  event_window.cpp  event_window.hpp  register_classes_event.cpp  register_classes_event.hpp
engine/gameplay/: action_manager.cpp  action_manager.hpp  action_map.cpp  action_map.hpp  game_token_manager.cpp  game_token_manager.hpp
engine/gfx/: gfx_buffers.cpp  gfx_buffers.hpp  gfx_ctx.hpp  gfx_defs.hpp  gfx_desc_set.cpp  gfx_desc_set.hpp  gfx_driver.hpp  gfx_dynamic_buffers.cpp  gfx_dynamic_buffers.hpp  gfx_pass.cpp  gfx_pass.hpp  gfx_pipeline.cpp  gfx_pipeline.hpp  gfx_pipeline_cache.cpp  gfx_pipeline_cache.hpp  gfx_render_pass.cpp  gfx_render_pass.hpp  gfx_resource.hpp  gfx_sampler.cpp  gfx_sampler.hpp  gfx_shader.cpp  gfx_shader.hpp  gfx_texture.hpp  gfx_vector.hpp  gfx_vert_format.cpp  gfx_vert_format.hpp  gfx_vert_format_cache.cpp  gfx_vert_format_cache.hpp
engine/glsl/: glsl_builder.hpp  glsl_include_processor.cpp  glsl_include_processor.hpp  glsl_shader_compiler.cpp  glsl_shader_compiler.hpp
engine/grc/: _rtti.cpp  _rtti.hpp  font.cpp  grc_shader.cpp  grc_shader.hpp  grc_shader_class.cpp  grc_shader_class.hpp  grc_shader_class_builder.cpp  grc_shader_class_builder.hpp  grc_shader_manager.cpp  grc_shader_manager.hpp  grc_shader_param.cpp  grc_shader_param.hpp  grc_shader_param_block.cpp  grc_shader_param_block.hpp  grc_shader_pass.cpp  grc_shader_reflection.cpp  grc_shader_reflection.hpp  grc_shader_script.cpp  grc_shader_script.hpp  grc_shader_script_builder.cpp  grc_shader_script_builder.hpp  grc_texture_compression.cpp  grc_texture_compression.hpp  grc_texture_manager.cpp  grc_texture_manager.hpp  grc_texture_resize.cpp  grc_texture_resize.hpp  image.cpp  pso_cache.cpp  pso_cache.hpp  pso_file.cpp  pso_file.hpp  shader.cpp  shader.hpp  shader_builder.cpp  shader_builder.hpp  shader_cache.cpp  shader_cache.hpp  shader_compiler.hpp  (+25 more)
engine/hgfx/: hgfx_pass.cpp  hgfx_pass.hpp  hgfx_pass_base.cpp  hgfx_pass_base.hpp  hgfx_pass_text.cpp  hgfx_pass_text.hpp
engine/hooks/: hook_config.hpp  hook_engine.hpp  hook_logs.hpp  hook_profiler.hpp  hook_root_remap.hpp  hook_uuid_gen.hpp
engine/io/: archive.cpp  archive.hpp  archive_file.cpp  archive_file.hpp  archive_memory.cpp  archive_memory.hpp  base64.cpp  base64.hpp  compression.cpp  compression.hpp  context.cpp  context.hpp  enum.hpp  serialization.hpp  yaml.cpp  yaml.hpp
engine/main/: main.cpp  (+1 more)
(+2021 files in other folders)
